--- a/arch/arm/configs/msm8226_defconfig
+++ b/arch/arm/configs/msm8226_defconfig
@@ -93,6 +93,8 @@ CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
 CONFIG_CP_ACCESS=y
 CONFIG_USE_OF=y
+CONFIG_CPU_FREQ_STAT_DETAILS=y
+CONFIG_QUAD_CORES_SOC_STAT=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
